data/libdpxwrapper-0.1/libdpx.h

int			DPxIsTouchpixxLogEvents(void);							
void		DPxEnableTouchpixxLogEvents(void);						
void		DPxDisableTouchpixxLogEvents(void);						
int         DPxIsTouchpixxPressed(void);                            
void		DPxGetTouchpixxCoords(int* x, int* y);                  
void        DPxSetTouchpixxStabilizeDuration(double duration);      
double      DPxGetTouchpixxStabilizeDuration(void);
void		DPxInitAudCodec(void);									
void		DPxSetAudLeftValue(int value);							
void		DPxSetAudRightValue(int value);							
int			DPxGetAudLeftValue(void);								
int			DPxGetAudRightValue(void);								
void		DPxSetAudLeftVolume(double volume);						
double		DPxGetAudLeftVolume(void);								
void		DPxSetAudRightVolume(double volume);					
double		DPxGetAudRightVolume(void);								
void		DPxSetAudVolume(double volume);							
double		DPxGetAudVolume(void);									
void		DPxSetAudCodecOutLeftVolume(double volume, int dBUnits);		
double		DPxGetAudCodecOutLeftVolume(int dBUnits);						
void		DPxSetAudCodecOutRightVolume(double volume, int dBUnits);		
double		DPxGetAudCodecOutRightVolume(int dBUnits);						
void		DPxSetAudCodecOutVolume(double volume, int dBUnits);			
double		DPxGetAudCodecOutVolume(int dBUnits);							
void		DPxSetAudCodecSpeakerLeftVolume(double volume, int dBUnits);	
double		DPxGetAudCodecSpeakerLeftVolume(int dBUnits);					
void		DPxSetAudCodecSpeakerRightVolume(double volume, int dBUnits);	
double		DPxGetAudCodecSpeakerRightVolume(int dBUnits);					
void		DPxSetAudCodecSpeakerVolume(double volume, int dBUnits);		
double		DPxGetAudCodecSpeakerVolume(int dBUnits);						
void		DPxSetAudLRMode(int lrMode);							
int			DPxGetAudLRMode(void);									
void		DPxSetAudBuffBaseAddr(unsigned buffBaseAddr);			
unsigned	DPxGetAudBuffBaseAddr(void);							
void		DPxSetAudBuffReadAddr(unsigned buffReadAddr);			
unsigned	DPxGetAudBuffReadAddr(void);							
void		DPxSetAudBuffSize(unsigned buffSize);					
unsigned	DPxGetAudBuffSize(void);								
void		DPxSetAudBuff(unsigned buffAddr, unsigned buffSize);	
void		DPxSetAuxBuffBaseAddr(unsigned buffBaseAddr);			
unsigned	DPxGetAuxBuffBaseAddr(void);							
void		DPxSetAuxBuffReadAddr(unsigned buffReadAddr);			
unsigned	DPxGetAuxBuffReadAddr(void);							
void		DPxSetAuxBuffSize(unsigned buffSize);					
unsigned	DPxGetAuxBuffSize(void);								
void		DPxSetAuxBuff(unsigned buffAddr, unsigned buffSize);	
void		DPxSetAudSchedOnset(unsigned onset);					
unsigned	DPxGetAudSchedOnset(void);								
void		DPxSetAudSchedRate(unsigned rateValue, int rateUnits);	
unsigned	DPxGetAudSchedRate(int *rateUnits);						
void		DPxSetAudSchedCount(unsigned count);					
unsigned	DPxGetAudSchedCount(void);								
void		DPxEnableAudSchedCountdown(void);						
void		DPxDisableAudSchedCountdown(void);						
int			DPxIsAudSchedCountdown(void);							
void		DPxSetAudSched(unsigned onset, unsigned rateValue, int rateUnits, unsigned count);	
void		DPxStartAudSched(void);									
void		DPxStopAudSched(void);									
int			DPxIsAudSchedRunning(void);								
void		DPxSetAuxSchedOnset(unsigned onset);					
unsigned	DPxGetAuxSchedOnset(void);								
void		DPxSetAuxSchedRate(unsigned rateValue, int rateUnits);	
unsigned	DPxGetAuxSchedRate(int *rateUnits);						
void		DPxSetAuxSchedCount(unsigned count);					
unsigned	DPxGetAuxSchedCount(void);								
void		DPxEnableAuxSchedCountdown(void);						
void		DPxDisableAuxSchedCountdown(void);						
int			DPxIsAuxSchedCountdown(void);							
void		DPxSetAuxSched(unsigned onset, unsigned rateValue, int rateUnits, unsigned count);	 
void		DPxStartAuxSched(void);									
void		DPxStopAuxSched(void);									
int			DPxIsAuxSchedRunning(void);								
double		DPxGetAudGroupDelay(double sampleRate);					
void		DPxSetMicSource(int source, double gain, int dBUnits);	
int			DPxGetMicSource(double *gain, int dBUnits);				
int			DPxGetMicLeftValue(void);								
int			DPxGetMicRightValue(void);								
void		DPxSetMicLRMode(int lrMode);							
int			DPxGetMicLRMode(void);									
void		DPxEnableAudMicLoopback(void);							
void		DPxDisableAudMicLoopback(void);							
int			DPxIsAudMicLoopback(void);								
void		DPxSetMicBuffBaseAddr(unsigned buffBaseAddr);			
unsigned	DPxGetMicBuffBaseAddr(void);							
void		DPxSetMicBuffWriteAddr(unsigned buffWriteAddr);			
unsigned	DPxGetMicBuffWriteAddr(void);							
void		DPxSetMicBuffSize(unsigned buffSize);					
unsigned	DPxGetMicBuffSize(void);								
void		DPxSetMicBuff(unsigned buffAddr, unsigned buffSize);	