misc/libdpxwrapper-0.1/libdpxwrapper.py

DPxIsTouchpixxLogEvents = lib_handle.DPxIsTouchpixxLogEvents
DPxIsTouchpixxLogEvents.restype = c_int
DPxIsTouchpixxLogEvents.argtypes = []
DPxEnableTouchpixxLogEvents = lib_handle.DPxEnableTouchpixxLogEvents
DPxEnableTouchpixxLogEvents.restype = None
DPxEnableTouchpixxLogEvents.argtypes = []
DPxDisableTouchpixxLogEvents = lib_handle.DPxDisableTouchpixxLogEvents
DPxDisableTouchpixxLogEvents.restype = None
DPxDisableTouchpixxLogEvents.argtypes = []
DPxIsTouchpixxPressed = lib_handle.DPxIsTouchpixxPressed
DPxIsTouchpixxPressed.restype = c_int
DPxIsTouchpixxPressed.argtypes = []
DPxGetTouchpixxCoords = lib_handle.DPxGetTouchpixxCoords
DPxGetTouchpixxCoords.restype = None
DPxGetTouchpixxCoords.argtypes = [POINTER(c_int), POINTER(c_int)]
DPxSetTouchpixxStabilizeDuration = lib_handle.DPxSetTouchpixxStabilizeDuration
DPxSetTouchpixxStabilizeDuration.restype = None
DPxSetTouchpixxStabilizeDuration.argtypes = [c_double]
DPxGetTouchpixxStabilizeDuration = lib_handle.DPxGetTouchpixxStabilizeDuration
DPxGetTouchpixxStabilizeDuration.restype = c_double
DPxGetTouchpixxStabilizeDuration.argtypes = []
DPxInitAudCodec = lib_handle.DPxInitAudCodec
DPxInitAudCodec.restype = None
DPxInitAudCodec.argtypes = []
DPxSetAudLeftValue = lib_handle.DPxSetAudLeftValue
DPxSetAudLeftValue.restype = None
DPxSetAudLeftValue.argtypes = [c_int]
DPxSetAudRightValue = lib_handle.DPxSetAudRightValue
DPxSetAudRightValue.restype = None
DPxSetAudRightValue.argtypes = [c_int]
DPxGetAudLeftValue = lib_handle.DPxGetAudLeftValue
DPxGetAudLeftValue.restype = c_int
DPxGetAudLeftValue.argtypes = []
DPxGetAudRightValue = lib_handle.DPxGetAudRightValue
DPxGetAudRightValue.restype = c_int
DPxGetAudRightValue.argtypes = []
DPxSetAudLeftVolume = lib_handle.DPxSetAudLeftVolume
DPxSetAudLeftVolume.restype = None
DPxSetAudLeftVolume.argtypes = [c_double]
DPxGetAudLeftVolume = lib_handle.DPxGetAudLeftVolume
DPxGetAudLeftVolume.restype = c_double
DPxGetAudLeftVolume.argtypes = []
DPxSetAudRightVolume = lib_handle.DPxSetAudRightVolume
DPxSetAudRightVolume.restype = None
DPxSetAudRightVolume.argtypes = [c_double]
DPxGetAudRightVolume = lib_handle.DPxGetAudRightVolume
DPxGetAudRightVolume.restype = c_double
DPxGetAudRightVolume.argtypes = []
DPxSetAudVolume = lib_handle.DPxSetAudVolume
DPxSetAudVolume.restype = None
DPxSetAudVolume.argtypes = [c_double]
DPxGetAudVolume = lib_handle.DPxGetAudVolume
DPxGetAudVolume.restype = c_double
DPxGetAudVolume.argtypes = []
DPxSetAudCodecOutLeftVolume = lib_handle.DPxSetAudCodecOutLeftVolume
DPxSetAudCodecOutLeftVolume.restype = None
DPxSetAudCodecOutLeftVolume.argtypes = [c_double, c_int]
DPxGetAudCodecOutLeftVolume = lib_handle.DPxGetAudCodecOutLeftVolume
DPxGetAudCodecOutLeftVolume.restype = c_double
DPxGetAudCodecOutLeftVolume.argtypes = [c_int]
DPxSetAudCodecOutRightVolume = lib_handle.DPxSetAudCodecOutRightVolume
DPxSetAudCodecOutRightVolume.restype = None
DPxSetAudCodecOutRightVolume.argtypes = [c_double, c_int]
DPxGetAudCodecOutRightVolume = lib_handle.DPxGetAudCodecOutRightVolume
DPxGetAudCodecOutRightVolume.restype = c_double
DPxGetAudCodecOutRightVolume.argtypes = [c_int]
DPxSetAudCodecOutVolume = lib_handle.DPxSetAudCodecOutVolume
DPxSetAudCodecOutVolume.restype = None
DPxSetAudCodecOutVolume.argtypes = [c_double, c_int]
DPxGetAudCodecOutVolume = lib_handle.DPxGetAudCodecOutVolume
DPxGetAudCodecOutVolume.restype = c_double
DPxGetAudCodecOutVolume.argtypes = [c_int]
DPxSetAudCodecSpeakerLeftVolume = lib_handle.DPxSetAudCodecSpeakerLeftVolume
DPxSetAudCodecSpeakerLeftVolume.restype = None
DPxSetAudCodecSpeakerLeftVolume.argtypes = [c_double, c_int]
DPxGetAudCodecSpeakerLeftVolume = lib_handle.DPxGetAudCodecSpeakerLeftVolume
DPxGetAudCodecSpeakerLeftVolume.restype = c_double
DPxGetAudCodecSpeakerLeftVolume.argtypes = [c_int]
DPxSetAudCodecSpeakerRightVolume = lib_handle.DPxSetAudCodecSpeakerRightVolume
DPxSetAudCodecSpeakerRightVolume.restype = None
DPxSetAudCodecSpeakerRightVolume.argtypes = [c_double, c_int]
DPxGetAudCodecSpeakerRightVolume = lib_handle.DPxGetAudCodecSpeakerRightVolume
DPxGetAudCodecSpeakerRightVolume.restype = c_double
DPxGetAudCodecSpeakerRightVolume.argtypes = [c_int]
DPxSetAudCodecSpeakerVolume = lib_handle.DPxSetAudCodecSpeakerVolume
DPxSetAudCodecSpeakerVolume.restype = None
DPxSetAudCodecSpeakerVolume.argtypes = [c_double, c_int]
DPxGetAudCodecSpeakerVolume = lib_handle.DPxGetAudCodecSpeakerVolume
DPxGetAudCodecSpeakerVolume.restype = c_double
DPxGetAudCodecSpeakerVolume.argtypes = [c_int]
DPxSetAudLRMode = lib_handle.DPxSetAudLRMode
DPxSetAudLRMode.restype = None
DPxSetAudLRMode.argtypes = [c_int]
DPxGetAudLRMode = lib_handle.DPxGetAudLRMode
DPxGetAudLRMode.restype = c_int
DPxGetAudLRMode.argtypes = []
DPxSetAudBuffBaseAddr = lib_handle.DPxSetAudBuffBaseAddr
DPxSetAudBuffBaseAddr.restype = None
DPxSetAudBuffBaseAddr.argtypes = [c_uint]
DPxGetAudBuffBaseAddr = lib_handle.DPxGetAudBuffBaseAddr
DPxGetAudBuffBaseAddr.restype = c_uint
DPxGetAudBuffBaseAddr.argtypes = []
DPxSetAudBuffReadAddr = lib_handle.DPxSetAudBuffReadAddr
DPxSetAudBuffReadAddr.restype = None
DPxSetAudBuffReadAddr.argtypes = [c_uint]
DPxGetAudBuffReadAddr = lib_handle.DPxGetAudBuffReadAddr
DPxGetAudBuffReadAddr.restype = c_uint
DPxGetAudBuffReadAddr.argtypes = []
DPxSetAudBuffSize = lib_handle.DPxSetAudBuffSize
DPxSetAudBuffSize.restype = None
DPxSetAudBuffSize.argtypes = [c_uint]
DPxGetAudBuffSize = lib_handle.DPxGetAudBuffSize
DPxGetAudBuffSize.restype = c_uint
DPxGetAudBuffSize.argtypes = []
DPxSetAudBuff = lib_handle.DPxSetAudBuff
DPxSetAudBuff.restype = None
DPxSetAudBuff.argtypes = [c_uint, c_uint]
DPxSetAuxBuffBaseAddr = lib_handle.DPxSetAuxBuffBaseAddr
DPxSetAuxBuffBaseAddr.restype = None
DPxSetAuxBuffBaseAddr.argtypes = [c_uint]
DPxGetAuxBuffBaseAddr = lib_handle.DPxGetAuxBuffBaseAddr
DPxGetAuxBuffBaseAddr.restype = c_uint
DPxGetAuxBuffBaseAddr.argtypes = []
DPxSetAuxBuffReadAddr = lib_handle.DPxSetAuxBuffReadAddr
DPxSetAuxBuffReadAddr.restype = None
DPxSetAuxBuffReadAddr.argtypes = [c_uint]
DPxGetAuxBuffReadAddr = lib_handle.DPxGetAuxBuffReadAddr
DPxGetAuxBuffReadAddr.restype = c_uint
DPxGetAuxBuffReadAddr.argtypes = []
DPxSetAuxBuffSize = lib_handle.DPxSetAuxBuffSize
DPxSetAuxBuffSize.restype = None
DPxSetAuxBuffSize.argtypes = [c_uint]
DPxGetAuxBuffSize = lib_handle.DPxGetAuxBuffSize
DPxGetAuxBuffSize.restype = c_uint
DPxGetAuxBuffSize.argtypes = []
DPxSetAuxBuff = lib_handle.DPxSetAuxBuff
DPxSetAuxBuff.restype = None
DPxSetAuxBuff.argtypes = [c_uint, c_uint]
DPxSetAudSchedOnset = lib_handle.DPxSetAudSchedOnset
DPxSetAudSchedOnset.restype = None
DPxSetAudSchedOnset.argtypes = [c_uint]
DPxGetAudSchedOnset = lib_handle.DPxGetAudSchedOnset
DPxGetAudSchedOnset.restype = c_uint
DPxGetAudSchedOnset.argtypes = []
DPxSetAudSchedRate = lib_handle.DPxSetAudSchedRate
DPxSetAudSchedRate.restype = None
DPxSetAudSchedRate.argtypes = [c_uint, c_int]
DPxGetAudSchedRate = lib_handle.DPxGetAudSchedRate
DPxGetAudSchedRate.restype = c_uint
DPxGetAudSchedRate.argtypes = [POINTER(c_int)]
DPxSetAudSchedCount = lib_handle.DPxSetAudSchedCount
DPxSetAudSchedCount.restype = None
DPxSetAudSchedCount.argtypes = [c_uint]
DPxGetAudSchedCount = lib_handle.DPxGetAudSchedCount
DPxGetAudSchedCount.restype = c_uint
DPxGetAudSchedCount.argtypes = []
DPxEnableAudSchedCountdown = lib_handle.DPxEnableAudSchedCountdown
DPxEnableAudSchedCountdown.restype = None
DPxEnableAudSchedCountdown.argtypes = []
DPxDisableAudSchedCountdown = lib_handle.DPxDisableAudSchedCountdown
DPxDisableAudSchedCountdown.restype = None
DPxDisableAudSchedCountdown.argtypes = []
DPxIsAudSchedCountdown = lib_handle.DPxIsAudSchedCountdown
DPxIsAudSchedCountdown.restype = c_int
DPxIsAudSchedCountdown.argtypes = []
DPxSetAudSched = lib_handle.DPxSetAudSched
DPxSetAudSched.restype = None
DPxSetAudSched.argtypes = [c_uint, c_uint, c_int, c_uint]
DPxStartAudSched = lib_handle.DPxStartAudSched
DPxStartAudSched.restype = None
DPxStartAudSched.argtypes = []
DPxStopAudSched = lib_handle.DPxStopAudSched
DPxStopAudSched.restype = None
DPxStopAudSched.argtypes = []
DPxIsAudSchedRunning = lib_handle.DPxIsAudSchedRunning
DPxIsAudSchedRunning.restype = c_int
DPxIsAudSchedRunning.argtypes = []
DPxSetAuxSchedOnset = lib_handle.DPxSetAuxSchedOnset
DPxSetAuxSchedOnset.restype = None
DPxSetAuxSchedOnset.argtypes = [c_uint]
DPxGetAuxSchedOnset = lib_handle.DPxGetAuxSchedOnset
DPxGetAuxSchedOnset.restype = c_uint
DPxGetAuxSchedOnset.argtypes = []
DPxSetAuxSchedRate = lib_handle.DPxSetAuxSchedRate
DPxSetAuxSchedRate.restype = None
DPxSetAuxSchedRate.argtypes = [c_uint, c_int]
DPxGetAuxSchedRate = lib_handle.DPxGetAuxSchedRate
DPxGetAuxSchedRate.restype = c_uint
DPxGetAuxSchedRate.argtypes = [POINTER(c_int)]
DPxSetAuxSchedCount = lib_handle.DPxSetAuxSchedCount
DPxSetAuxSchedCount.restype = None
DPxSetAuxSchedCount.argtypes = [c_uint]
DPxGetAuxSchedCount = lib_handle.DPxGetAuxSchedCount
DPxGetAuxSchedCount.restype = c_uint
DPxGetAuxSchedCount.argtypes = []
DPxEnableAuxSchedCountdown = lib_handle.DPxEnableAuxSchedCountdown
DPxEnableAuxSchedCountdown.restype = None
DPxEnableAuxSchedCountdown.argtypes = []
DPxDisableAuxSchedCountdown = lib_handle.DPxDisableAuxSchedCountdown
DPxDisableAuxSchedCountdown.restype = None
DPxDisableAuxSchedCountdown.argtypes = []
DPxIsAuxSchedCountdown = lib_handle.DPxIsAuxSchedCountdown
DPxIsAuxSchedCountdown.restype = c_int
DPxIsAuxSchedCountdown.argtypes = []
DPxSetAuxSched = lib_handle.DPxSetAuxSched
DPxSetAuxSched.restype = None
DPxSetAuxSched.argtypes = [c_uint, c_uint, c_int, c_uint]
DPxStartAuxSched = lib_handle.DPxStartAuxSched
DPxStartAuxSched.restype = None
DPxStartAuxSched.argtypes = []
DPxStopAuxSched = lib_handle.DPxStopAuxSched
DPxStopAuxSched.restype = None
DPxStopAuxSched.argtypes = []
DPxIsAuxSchedRunning = lib_handle.DPxIsAuxSchedRunning
DPxIsAuxSchedRunning.restype = c_int
DPxIsAuxSchedRunning.argtypes = []
DPxGetAudGroupDelay = lib_handle.DPxGetAudGroupDelay
DPxGetAudGroupDelay.restype = c_double
DPxGetAudGroupDelay.argtypes = [c_double]
DPxSetMicSource = lib_handle.DPxSetMicSource
DPxSetMicSource.restype = None
DPxSetMicSource.argtypes = [c_int, c_double, c_int]
DPxGetMicSource = lib_handle.DPxGetMicSource
DPxGetMicSource.restype = c_int
DPxGetMicSource.argtypes = [POINTER(c_double), c_int]
DPxGetMicLeftValue = lib_handle.DPxGetMicLeftValue
DPxGetMicLeftValue.restype = c_int
DPxGetMicLeftValue.argtypes = []
DPxGetMicRightValue = lib_handle.DPxGetMicRightValue
DPxGetMicRightValue.restype = c_int
DPxGetMicRightValue.argtypes = []
DPxSetMicLRMode = lib_handle.DPxSetMicLRMode
DPxSetMicLRMode.restype = None
DPxSetMicLRMode.argtypes = [c_int]
DPxGetMicLRMode = lib_handle.DPxGetMicLRMode
DPxGetMicLRMode.restype = c_int
DPxGetMicLRMode.argtypes = []
DPxEnableAudMicLoopback = lib_handle.DPxEnableAudMicLoopback
DPxEnableAudMicLoopback.restype = None
DPxEnableAudMicLoopback.argtypes = []
DPxDisableAudMicLoopback = lib_handle.DPxDisableAudMicLoopback
DPxDisableAudMicLoopback.restype = None
DPxDisableAudMicLoopback.argtypes = []
DPxIsAudMicLoopback = lib_handle.DPxIsAudMicLoopback
DPxIsAudMicLoopback.restype = c_int
DPxIsAudMicLoopback.argtypes = []
DPxSetMicBuffBaseAddr = lib_handle.DPxSetMicBuffBaseAddr
DPxSetMicBuffBaseAddr.restype = None
DPxSetMicBuffBaseAddr.argtypes = [c_uint]
DPxGetMicBuffBaseAddr = lib_handle.DPxGetMicBuffBaseAddr
DPxGetMicBuffBaseAddr.restype = c_uint
DPxGetMicBuffBaseAddr.argtypes = []
DPxSetMicBuffWriteAddr = lib_handle.DPxSetMicBuffWriteAddr
DPxSetMicBuffWriteAddr.restype = None
DPxSetMicBuffWriteAddr.argtypes = [c_uint]
DPxGetMicBuffWriteAddr = lib_handle.DPxGetMicBuffWriteAddr
DPxGetMicBuffWriteAddr.restype = c_uint
DPxGetMicBuffWriteAddr.argtypes = []
DPxSetMicBuffSize = lib_handle.DPxSetMicBuffSize
DPxSetMicBuffSize.restype = None
DPxSetMicBuffSize.argtypes = [c_uint]
DPxGetMicBuffSize = lib_handle.DPxGetMicBuffSize
DPxGetMicBuffSize.restype = c_uint
DPxGetMicBuffSize.argtypes = []
DPxSetMicBuff = lib_handle.DPxSetMicBuff
DPxSetMicBuff.restype = None
DPxSetMicBuff.argtypes = [c_uint, c_uint]
